--- a/CodeAcademy Assignment.html
+++ b/CodeAcademy Assignment.html
@@ -40,7 +40,7 @@
 	        <li>AMARILLO, TEXAS</li>
 	        <li>MOUNT VERNON, OHIO</lI>
 	        <li>PHOENIX, ARIZONA</li>
-	        <li>CHARLOTTE, NORTH CAROLINA</li>
+	        <li>CHARLOTTE, NORTH CAROLINA</li></ol>
 	        
 	
 	
