--- a/CodeAcademy Assignment.html
+++ b/CodeAcademy Assignment.html
@@ -4,7 +4,7 @@
 <head>
 		<title>John W. Renz</title>
 	</head>
-	<body style="background-color:lightblue"> <img src="https://www.linkedin.com/in/johnwrenz/?lipi=urn%3Ali%3Apage%3Ad_flagship3_feed%3B3hwe1GZbT62aSjmISfzm0g%3D%3D&licu=urn%3Ali%3Acontrol%3Ad_flagship3_feed-identity_profile_photo"/>  
+	<body style="background-color:lightblue"> <img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/AAEAAQAAAAAAAAskAAAAJDYyMTk2ZTAxLTE2OGYtNDE3OC1hY2ZiLTEyZDY0MTljZWQwZA.jpg/>  
 	<p>MY HOMETOWN IS SAINT LOUIS, MISSOURI</p>
 	    <ul style="font-family:Arial;font-size:20px">POSITIONS HELD</ul>
 	        <ol>
@@ -22,7 +22,7 @@
 	        <li>LAUNCHCODE</li></ul>
 	  
 	    
-	    <ul>INTERESTS          </ul>
+	    <ul><strong>INTERESTS     </strong>     </ul>
 	       <ol> <li>LEARNING TO CODE</li>
 	        <li>COLLECTIBLE PORSCHE AUTOMOBILES</li>
 	        <li>PLAYING THE GUITAR</li></ol>
